# zed-csv

./: Cargo.toml  DEVELOPMENT  LICENSE  Makefile  README.md  extension.toml
.github/workflows/: release.yml
languages/csv/: config.toml  highlights.scm
languages/tsv/: config.toml  highlights.scm
src/: lib.rs
test/: example.csv  example.tsv
